# metacheck

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp
src/: generators.hpp  metacheck.hpp  mpl.hpp  precalc.hpp  random.hpp  utility.hpp
src/metacheck/: generators.hpp  interface.hpp  metacheck.hpp  minify.hpp  random.hpp  result_types.hpp  test_all.hpp  test_case.hpp  utility.hpp
src/metacheck/output/: gtest_output.hpp  output.hpp
test/: generators.cpp  main.cpp  metacheck_test_main.cpp  test.cpp  test.hpp  utility.cpp
